manifest/mongo-manifest/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: api
  namespace: three-tier
  labels: 
    role: api
spec: 
  replicas: 1
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector: 
    matchLabels:
      role: api
  template:
    metadata:
      labels:
        role: api
    spec:
      containers:
      - name: api  
        image: bossmanjerry/flask-backend-app:v16
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        livenessProbe: 
          httpGet:
            path: /ok
            port: 5000
          initialDelaySeconds: 2
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /ok
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
