manifest/mongo-manifest/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: three-tier
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  selector:
    role: api


# apiVersion: v1
# kind: Service
# metadata:
#   name: api
#   namespace: three-tier
# spec: 
#   ports:
#   - port: 5000
#     protocol: TCP
#   type: ClusterIP
#   selector:
#     role: api
