manifest/mongo-manifest/frontend-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: frontend
  namespace: three-tier
spec:
  ports:
    - port: 5173  # Expose the service on port 80
      targetPort: 5173  # Map the service's port 80 to the container's 5173
      nodePort: 30001
  type: NodePort
  selector:
    role: frontend
