manifest/mongo-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-ingress
  namespace: three-tier
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.example
    http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 5173



# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: user-ingress
#   namespace: three-tier
#   annotations:
#     nginx.ingress.kubernetes.io/use-regex: "true"
# spec:
#   ingressClassName: nginx
#   tls:
#   - hosts:
#     - api.example.com
#     secretName: tls-secret
#   rules:
#   - host: api.example.com
#     http:
#       paths:
#       # Route /user requests to the backend
#       - path: /users
#         pathType: Prefix
#         backend:
#           service:
#             name: api
#             port:
#               number: 5000
#       # Route root requests to the frontend
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: frontend
#             port:
#               number: 80
